Update Java version to 25